# book-index-manager

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  source-catalog.json
.claude/: CLAUDE.md  todo.md
.github/workflows/: test.yml
.husky/: pre-push
book_index_manager/: __init__.py  __main__.py  _utils.py  bid_link.py  config.py  entry_extractor.py  exceptions.py  id_generator.py  logger.py  manager.py  migration.py  promotion.py  schema.py  storage.py  storage_base.py  storage_github.py
book_index_manager/scripts/: create_books_from_catalog.py  pack_bundle.py  update_catalog_stats.py  update_has_collated.py  update_site_stats.py
docs/: resource-metadata.md  source-catalog.md
tests/: test_cli.py  test_entity.py  test_entry_extractor.py  test_id_generator.py  test_migration.py  test_promotion.py  test_revision.py  test_schema.py  test_scripts.py
ui/: .gitignore  DESIGN.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
ui/server/: normalize.ts  vite-plugin-api.ts
ui/src/: id.ts  index.ts  storage-entry.ts  transport-entry.ts  types.ts
ui/src/app/: main.tsx
ui/src/components/: BookDetailLayout.tsx  BookFullText.tsx  CollatedEdition.tsx  CollectionCatalog.tsx  CreateEntityDialog.tsx  EntityDetail.tsx  EntityPickerDialog.tsx  EntitySelector.tsx  FeedbackButton.tsx  FeedbackDialog.tsx  FeedbackForm.tsx  FeedbackList.tsx  FeedbackTab.tsx  HomePage.tsx  IndexApp.tsx  IndexBrowser.tsx  IndexDetail.tsx  IndexEditor.tsx  IndexView.tsx  LocaleToggle.tsx  ModeIndicator.tsx  RelationPanel.tsx  ResourceEditor.tsx  ResourceList.tsx  SearchInput.tsx  SmartBidInput.tsx  SourceEditor.tsx  VersionLineageGraph.tsx  VersionLineageList.tsx  VersionLineageView.tsx  WorkCatalog.tsx
ui/src/components/common/: Badge.tsx  (+7 more)
ui/src/core/: bid-link.ts  bid-url.tsx  exceptions.ts  filesystem.ts  id-generator.ts  lineage-graph.ts  manager.ts  normalize-catalog.ts  schema.ts  storage.ts
ui/src/hooks/: useIsMobile.ts
ui/src/i18n/: context.ts  helpers.ts  index.ts  provider.tsx  types.ts  use-convert.ts  use-t.ts
ui/src/storage/: bundle-storage.ts  dev-api-storage.ts  github-storage.ts  local-storage.ts  promotions.ts  types.ts
ui/src/styles/: variables.css
ui/src/transport/: github-transport.ts  http-transport.ts  local-transport.ts  types.ts  vscode-transport.ts
ui/src/types/: opencc-js.d.ts
ui/tests/: mobile.spec.ts
ui/tests/unit/: BundleStorage.test.ts  IndexBrowser.test.tsx  SearchInput.test.tsx  cleanName.test.ts  lineage-graph.test.ts  normalize-catalog.test.ts  promotions.test.ts  sanity.test.ts  storage.test.ts
(+3 files in other folders)
