[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "book-index-manager"
version = "0.1.0"
description = "Storage, indexing, and management for ancient Chinese book metadata"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["ancient-books", "book-index", "metadata", "classical-chinese"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build>=1.0",
    "ruff>=0.4",
]

[project.scripts]
book-index = "book_index_manager.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["book_index_manager*"]
exclude = ["tests*"]
