[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "book-index-manager"
dynamic = ["version"]
description = "Storage, indexing, and management for ancient Chinese book metadata"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["ancient-books", "book-index", "metadata", "classical-chinese"]
authors = [
    { name = "Li Shaodong" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/open-guji/book-index-manager"
Repository = "https://github.com/open-guji/book-index-manager"
Issues = "https://github.com/open-guji/book-index-manager/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build>=1.0",
    "ruff>=0.4",
]

[project.scripts]
book-index = "book_index_manager.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["book_index_manager*"]
exclude = ["tests*"]

[tool.setuptools_scm]
# 版本号自动从 git tag 派生。
# 使用 'py-v*' 命名空间避免与 ui/ 的 'book-index-ui-v*' 冲突。
# 还没有任何 py-v* tag 时退回 fallback。
write_to = "book_index_manager/_version.py"
fallback_version = "0.1.0.dev0"
git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "py-v*"]
